--- a/modulo1/html-sistema-loja/index.html
+++ b/modulo1/html-sistema-loja/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Aláfia Encadernação</title>
+   <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <header>
-        <h1>Bem-vind@ ao <em>Aláfia Encadernação</em>!</h1>
-        <p>Encadernação criativa e personalizada</p>
+        <h1 class="nome-da-loja">Aláfia Encadernação</h1>
+        <h2 class="subtitulo">Encadernação criativa e personalizada.</h2>
     </header>
 
     <nav>
@@ -20,14 +21,16 @@
     </nav>
 
     <main>
+        <p class="descricao-da-loja">Aqui você encontra agendas, planners, cadernos e blocos de anotações. A capa é personalizada! Você pode colocar nome, ilustração ou algum tema específico.</p>
         <!-- ADICIONAR CONTEÚDO PRINCIPAL SOBRE SUA LOJINHA -->
     </main>
 
     
     <footer>
-        <p>Siga-nos nas redes sociais!</p>
+        <p class="siga">Siga-nos nas redes sociais!</p>
         <a href="https://www.instagram.com/por.ebele/" >Instagram</a>
-        <img src="./img/intagram_icone.png">
+        <img src="./img/instagram_icone.png">
+        <p class="contato-rodape">Entre em contato através do e-mail: alafia@gmail.com</p>
 
     </footer>
 </body>
