--- a/modulo1/css-bugfixes/exercicio-bugfixes/comprar.html
+++ b/modulo1/css-bugfixes/exercicio-bugfixes/comprar.html
@@ -43,7 +43,7 @@
     </div>
     <div>
         <button id="back-button"> 
-            <a href="file:///D:/SETUP/ailton-Ebele-Silva/modulo1/css-bugfixes/exercicio-bugfixes/home.html"> VOLTAR 
+            <a href="http://127.0.0.1:5500/exercicio-bugfixes/home.html"> VOLTAR 
             </a> 
         </button>
         
