--- a/modulo1/projeto-portfolio/projetos.html
+++ b/modulo1/projeto-portfolio/projetos.html
@@ -28,13 +28,15 @@
        <br> <span class="parag1"><b>Esse foi um projeto de fixação no qual o objetivo era criar um jogo semelhante ao Blackjack (também conhecido como "21").</b> </span><br>
 
          <br>  <span class="parag2"> As regras do jogo são as seguintes:- Existem 2 jogadores: o usuário e o computador.</span> <br> 
-         <br><span class="parag2"> - Os jogadores usam um baralho com muitas cartas. As cartas têm um número (A, 2, 3, 4, 5, 6, 7, 8, 9, 10, J , Q, K) e um naipe (Copas (♥️), Paus (♣️), Ouros(♦️) e Espadas(♠️)). Por exemplo, uma carta do baralho é o dois de Paus (2♣️). </span> <br><span class="parag2">Existem 52 possibilidades de cartas diferentes (13 números e 4 naipes).</span> <br>
+         <br><span class="parag2"> - Os jogadores usam um baralho com muitas cartas. As cartas têm um número (A, 2, 3, 4, 5, 6, 7, 8, 9, 10, J , Q, K) e um naipe (Copas (♥️), Paus (♣️), Ouros(♦️) e Espadas(♠️)).
+            <br> <span class="parag2">Por exemplo, uma carta do baralho é o dois de Paus (2♣️). </span>
+             <br><span class="parag2">Existem 52 possibilidades de cartas diferentes (13 números e 4 naipes).</span> <br>
          <span class="parag2">  - Os jogadores compram cartas do baralho. Ao comprar uma carta do baralho, ela pode ser de qualquer uma das 52 cartas, com probabilidade igual.</span> <br> 
 
          <span class="parag2"> - As cartas tem um valor de acordo com seu número (a carta 4♣️ tem valor 4, e a carta 9♦️ tem valor 9). As cartas J, Q e K tem valor 10, e a carta A tem valor 11.</span> <br>
 
-         <span class="parag2">  - O jogo inicia com cada jogador (usuário e computador) recebendo 2 cartas. A pontuação de cada jogador é a soma do valor das suas cartas.
-            - O jogador com a maior pontuação ganha a rodada.</span><br>
+         <span class="parag2">  - O jogo inicia com cada jogador (usuário e computador) recebendo 2 cartas. A pontuação de cada jogador é a soma do valor das suas cartas.</span><br>
+            <span class="parag2">  - O jogador com a maior pontuação ganha a rodada.</span><br>
             <br>
 
             <span class="parag3"><b>O projeto consistiu em criar um programa que:</b> 
@@ -43,13 +45,13 @@
                 <br> <span class="parag3">3- Se o usuário responder <em>cancel</em>, imprime uma mensagem no console "O jogo acabou."</span><br>
               <br>  <span class="parag3">4- Se o usuário responder <em>ok</em>, o programa deve iniciar uma nova rodada.</span>
             </span>
-
-
-                <li class="lista"><b>Tecnologias utilizadas:</b></li>
-                <ol class="lista2">
-                    <li>HTML</li>
-                    <li>CSS</li>
-                </ol>
+                </div>
+<br>
+                <li class="lista-tec"> <b>Tecnologias utilizadas: </b></li>
+                <ul>
+                    <li class="lista-tec2">HTML</li>
+                    <li class="lista-tec2">CSS</li>
+                </ul>
        <div>
         <img class="projeto2" src="./imagens/projeto2.png">
        </div>
