--- a/modulo1/projeto-portfolio/index.html
+++ b/modulo1/projeto-portfolio/index.html
@@ -105,17 +105,19 @@
                 <!-- <div>
                     <a class="link-projeto3" href="https://github.com/future4code/ailton-Ebele-Silva/tree/master/modulo1/html-sistema-loja">Clique aqui para ver mais</a>
             </div> -->
-            <div>
-                <p class="faixa-projeto"> Em construção...</p>
-              </div> 
+            <!-- <div class="faixa-projeto"> Em construção...
+              </div>  -->
+              <div>
+                <h2 class="titulo-projetos"> </h2>
 
+               <div>
          <h2 id="titulo-habilidades-comp">Habilidades Comportamentais</h2>
             <ul class="texto-habilidades-comp">
-                <li>Lorem ipsum: dolor sit amet consectetur adipisicing elit. Laudantium ab dolorum reiciendis, nostrum iste qui nesciunt impedit architecto! Architecto cum explicabo veritatis quisquam, velit alias nesciunt repudiandae aliquam impedit earum fugit ullam inventore ratione quibusdam distinctio nihil ab suscipit dolor quod. Quisquam quod voluptatum corrupti maiores magni, repellendus deleniti. Nostrum.</li>
+                <li><b>Empatia</b>: dolor sit amet consectetur adipisicing elit. Laudantium ab dolorum reiciendis, nostrum iste qui nesciunt impedit architecto! Architecto cum explicabo veritatis quisquam, velit alias nesciunt repudiandae aliquam impedit earum fugit ullam inventore ratione quibusdam distinctio nihil ab suscipit dolor quod. Quisquam quod voluptatum corrupti maiores magni, repellendus deleniti. Nostrum.</li>
                 <br>
-                <li>Lorem ipsum: dolor sit amet consectetur adipisicing elit. In vero eius culpa quae sed, sunt qui dolor eaque doloremque amet obcaecati nostrum et, delectus cumque autem officiis repudiandae velit quasi alias praesentium quaerat. Ullam ipsa laborum corrupti sit quibusdam fuga saepe ipsum quae excepturi explicabo? Autem tempore vero dolore alias.</li>
+                <li><b>Resiliência</b>: dolor sit amet consectetur adipisicing elit. In vero eius culpa quae sed, sunt qui dolor eaque doloremque amet obcaecati nostrum et, delectus cumque autem officiis repudiandae velit quasi alias praesentium quaerat. Ullam ipsa laborum corrupti sit quibusdam fuga saepe ipsum quae excepturi explicabo? Autem tempore vero dolore alias.</li>
                 <br>
-                <li>Lorem ipsum: dolor sit amet consectetur adipisicing elit. In vero eius culpa quae sed, sunt qui dolor eaque doloremque amet obcaecati nostrum et, delectus cumque autem officiis repudiandae velit quasi alias praesentium quaerat. Ullam ipsa laborum corrupti sit quibusdam fuga saepe ipsum quae excepturi explicabo? Autem tempore vero dolore alias.</li>
+                <li><b>Organização</b>: dolor sit amet consectetur adipisicing elit. In vero eius culpa quae sed, sunt qui dolor eaque doloremque amet obcaecati nostrum et, delectus cumque autem officiis repudiandae velit quasi alias praesentium quaerat. Ullam ipsa laborum corrupti sit quibusdam fuga saepe ipsum quae excepturi explicabo? Autem tempore vero dolore alias.</li>
             </ul> 
      <div>
          
