tentativa de resolução-fail

--- a/modulo1/css-labetube/video1.html
+++ b/modulo1/css-labetube/video1.html
@@ -1,37 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="video1.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="video1.css" />
     <title>Video1</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <header>
-          <div class="name">
-            <h1>FutureTube</h1>
-          </div>
-  
-        <form  class="search" action="#" method="post">
-             <input class="barra" type="text" name="search" id="search" placeholder="Busca" required>  <!--placeholder = texto dentro da barra de busca; required= só faz envio do form se colocar informaçao -->
-            <button type="submit"> <img class="lupa" src="icon/download.png" alt="lupa"></button>
-        </form>    
-        </header>
-  
-        <main>      
-    <div>
-        <p class="titulo-video"> Vídeo 1</p>
-        <video class="video1-outra-tela" src="https://storage.googleapis.com/future-apis.appspot.com/10.mp4" controls loop> 
-        </video>
-      
+      <header>
+        <div class="name">
+          <h1>FutureTube</h1>
+        </div>
+
+        <form class="search" action="#" method="post">
+          <input
+            class="barra"
+            type="text"
+            name="search"
+            id="search"
+            placeholder="Busca"
+            required
+          />
+          <!--placeholder = texto dentro da barra de busca; required= só faz envio do form se colocar informaçao -->
+          <button type="submit">
+            <img class="lupa" src="icon/download.png" alt="lupa" />
+          </button>
+        </form>
+      </header>
+
+      <main>
+        <div>
+          <p class="titulo-video">Vídeo 1</p>
+          <video
+            class="video1-outra-tela"
+            src="https://storage.googleapis.com/future-apis.appspot.com/10.mp4"
+            controls
+            loop
+          ></video>
+        </div>
+      </main>
+      <footer>
+        <p rodape>Copyright &copy Ebele Adaobi Silva</p>
+      </footer>
     </div>
-   
-</main>
-<footer>
-    <p rodape>Copyright &copy Ebele Adaobi Silva</p>
-</footer>
-</div>
-</body>
+  </body>
 </html>
