responsividade nas outras pag não funciona

--- a/modulo1/css-labetube/video1.html
+++ b/modulo1/css-labetube/video1.html
@@ -33,7 +33,7 @@
       <main>
         <div>
           <p class="titulo-video">Vídeo 1</p>
-          <video
+          <video autoplay
             class="video1-outra-tela"
             src="https://storage.googleapis.com/future-apis.appspot.com/10.mp4"
             controls
