--- a/modulo1/css-labetube/video2.html
+++ b/modulo1/css-labetube/video2.html
@@ -23,7 +23,7 @@
         <main>      
     <div>
         <p class="titulo-video"> Vídeo 2</p>
-        <video class="video2-outra-tela" src="https://storage.googleapis.com/future-apis.appspot.com/8.mp4" controls loop> </video> 
+        <video autoplay class="video2-outra-tela" src="https://storage.googleapis.com/future-apis.appspot.com/8.mp4" controls loop> </video> 
 
     </div>
    
