--- a/modulo1/css-labetube/index.html
+++ b/modulo1/css-labetube/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>FutureTube</title>
+    <title>Pagina principal da FutureTube</title>
   </head>
   <body>
-    <div class="container">
+    <div role="group" class="container">
       <header>
         <div class="name">
           <h1>FutureTube</h1>
         </div>
 
-        <form class="search" action="#" method="post">
+        <form class="barra-de-pesquisa" action="#" method="post">
           <input
             class="barra"
             type="text"
@@ -25,28 +25,26 @@
           />
           <!--placeholder = texto dentro da barra de busca; required= só faz envio do form se colocar informaçao -->
           <button type="submit">
-            <img class="lupa" src="icon/download.png" alt="lupa" />
+            <img class="botao-para-pesquisar" src="icon/download.png" alt="imagem de lupa no botao para enviar o texto ou palavra a ser buscado" />
           </button>
         </form>
       </header>
 
       <main>
-        <div>
+        <section>
           <video
             class="video1"
             src="https://storage.googleapis.com/future-apis.appspot.com/10.mp4"
             controls
             loop
-          >
-            -->
-          </video>
+          ></video>
           <!-- <img class="video1" src="icon/video1.png" alt="video1"> -->
           <nav>
             <a class="link1" href="video1.html"> Abrir </a>
             <!-- <a class="link1" href="https://storage.googleapis.com/future-apis.appspot.com/10.mp4"> Abrir </a> -->
           </nav>
-        </div>
-        <div>
+        </section>
+        <section>
           <video
             class="video2"
             src="https://storage.googleapis.com/future-apis.appspot.com/8.mp4"
@@ -55,8 +53,8 @@
           ></video>
           <!-- <img class="video2" src="icon/video2.png" alt="video2"> -->
           <a class="link2" href="video2.html"> Abrir </a>
-        </div>
-        <div>
+        </section>
+        <section>
           <video
             class="video3"
             src="https://storage.googleapis.com/future-apis.appspot.com/2.mp4"
@@ -70,8 +68,8 @@
           >
             Abrir
           </a>
-        </div>
-        <div>
+        </section>
+        <section>
           <video
             class="video4"
             src="https://storage.googleapis.com/future-apis.appspot.com/4.mp4"
@@ -85,8 +83,8 @@
           >
             Abrir
           </a>
-        </div>
-        <div>
+        </section>
+        <section>
           <video
             class="video5"
             src="https://storage.googleapis.com/future-apis.appspot.com/5.mp4"
@@ -100,8 +98,8 @@
           >
             Abrir
           </a>
-        </div>
-        <div>
+        </section>
+        <section>
           <video
             class="video6"
             src="https://storage.googleapis.com/future-apis.appspot.com/7.mp4"
@@ -115,8 +113,8 @@
           >
             Abrir
           </a>
-        </div>
-        <div>
+        </section>
+        <section>
           <video
             class="video7"
             src="https://storage.googleapis.com/future-apis.appspot.com/9.mp4"
@@ -130,8 +128,8 @@
           >
             Abrir
           </a>
-        </div>
-        <div>
+        </section>
+        <section>
           <video
             class="video8"
             src="https://storage.googleapis.com/future-apis.appspot.com/3.mp4"
@@ -145,7 +143,7 @@
           >
             Abrir
           </a>
-        </div>
+        </section>
       </main>
       <footer>
         <p rodape>Copyright &copy Ebele Adaobi Silva</p>
